--- a/Medicos/Medicos/Views/MainMenuPage.xaml
+++ b/Medicos/Medicos/Views/MainMenuPage.xaml
@@ -5,55 +5,46 @@
              BindingContext="{Binding Main, Source={StaticResource Locator}}"
              Title="Menú Principal">
     <ContentPage.Content>
+        <ScrollView>
         <StackLayout VerticalOptions="FillAndExpand" StyleClass="MainSL" BindingContext="{Binding MainMenu}">
-            <Label FontAttributes="Bold" FontSize="Large" HorizontalOptions="Center" Text="Caminando Juntos"></Label>
-            <StackLayout HorizontalOptions="Center" Orientation="Horizontal" Margin="0,20">
-                <StackLayout.GestureRecognizers>
-                    <TapGestureRecognizer Command="{Binding ReportarPacienteCommand}"/>
-                </StackLayout.GestureRecognizers>
-                <Image Source="add_user.png" WidthRequest="24"></Image>
-                <Label Text="Reportar Paciente"></Label>
-                <Image Source="arrow_next" WidthRequest="24" VerticalOptions="Center" HorizontalOptions="Center"></Image>
+            <StackLayout Margin="0,0,0,0">
+                <Image Source="top_bg.jpg" HorizontalOptions="Center"></Image>
             </StackLayout>
-            <StackLayout HorizontalOptions="Center" IsVisible="{Binding IsVisible, Mode=TwoWay}" Orientation="Horizontal" Margin="0,20">
-                <StackLayout.GestureRecognizers>
-                    <TapGestureRecognizer Command="{Binding VerPacienteCommand}"/>
-                </StackLayout.GestureRecognizers>
-                <Image Source="ver_info_paciente.png" WidthRequest="24"></Image>
-                <Label Text="Ver Información Paciente"></Label>
-                <Image Source="arrow_next" WidthRequest="24" VerticalOptions="Center" HorizontalOptions="Center"></Image>
-            </StackLayout>
-            <StackLayout HorizontalOptions="Center"  Orientation="Horizontal" Margin="0,20">
-                <StackLayout.GestureRecognizers>
-                    <TapGestureRecognizer Command="{Binding BeneficiosCommand}"/>
-                </StackLayout.GestureRecognizers>
-                <Image Source="gift.png" WidthRequest="24"></Image>
-                <Label Text="Beneficios del Programa"></Label>
-                <Image Source="arrow_next" WidthRequest="24" VerticalOptions="Center" HorizontalOptions="Center"></Image>
-            </StackLayout>
-            <StackLayout HorizontalOptions="Center" IsVisible="{Binding IsVisible, Mode=TwoWay}" Orientation="Horizontal" Margin="0,20">
-                <StackLayout.GestureRecognizers>
-                    <TapGestureRecognizer Command="{Binding NotificacionesCommand}"/>
-                </StackLayout.GestureRecognizers>
-                <Image Source="notificaciones.png" WidthRequest="24"></Image>
-                <Label Text="Notificaciones"></Label>
-                <Image Source="arrow_next" WidthRequest="24" VerticalOptions="Center" HorizontalOptions="Center"></Image>
-            </StackLayout>
-            <StackLayout HorizontalOptions="Center" Orientation="Horizontal" Margin="0,20">
-                <StackLayout.GestureRecognizers>
-                    <TapGestureRecognizer Command="{Binding SignoutCommand}"/>
-                </StackLayout.GestureRecognizers>
-                <Image Source="sign_out_option.png" WidthRequest="24"></Image>
-                <Label Text="Cerrar Sesión"></Label>
-                <Image Source="arrow_next" WidthRequest="24" VerticalOptions="Center" HorizontalOptions="Center"></Image>
-            </StackLayout>
+            <Image Source="reportar_paciente.png" WidthRequest="170" HorizontalOptions="Center" Margin="0,-50,0,20">
+                <Image.GestureRecognizers>
+                    <TapGestureRecognizer Command="{Binding ReportarPacienteCommand}"></TapGestureRecognizer>
+                </Image.GestureRecognizers>
+            </Image>
+                <Image Source="ver_infor_paciente.png" WidthRequest="260" IsVisible="{Binding IsVisible, Mode=TwoWay}" HorizontalOptions="Center" Margin="-10,0,0,20">
+                <Image.GestureRecognizers>
+                    <TapGestureRecognizer Command="{Binding VerPacienteCommand}"></TapGestureRecognizer>
+                </Image.GestureRecognizers>
+            </Image>
+                <Image Source="beneficios.png" WidthRequest="275" HorizontalOptions="Center" Margin="-10,0,0,20">
+                <Image.GestureRecognizers>
+                    <TapGestureRecognizer Command="{Binding BeneficiosCommand}"></TapGestureRecognizer>
+                </Image.GestureRecognizers>
+            </Image>
+                <Image Source="notificaciones_menu.png" WidthRequest="135" IsVisible="{Binding IsVisible, Mode=TwoWay}" HorizontalOptions="Center" Margin="-10,0,0,20">
+                <Image.GestureRecognizers>
+                        <TapGestureRecognizer Command="{Binding NotificacionesCommand}"></TapGestureRecognizer>
+                </Image.GestureRecognizers>
+            </Image>
 
-            <ActivityIndicator      
+            <Image Source="cerrar_sesion.png" WidthRequest="140" HorizontalOptions="Center" Margin="0,20">
+                <Image.GestureRecognizers>
+                    <TapGestureRecognizer Command="{Binding SignoutCommand}"></TapGestureRecognizer>
+                </Image.GestureRecognizers>
+            </Image>
+                <Label HorizontalOptions="Center" Text="Línea de atención gratuita nacional: 018000958020 - Bogotá: 6444507" TextColor="White" FontSize="Micro"></Label>
+
+                <ActivityIndicator      
                         IsRunning="{Binding IsRunning, Mode=TwoWay}"
                         IsVisible="{Binding IsBusy}"
                         VerticalOptions="Center"
                         HorizontalOptions="Center">
             </ActivityIndicator>
         </StackLayout>
+        </ScrollView>
     </ContentPage.Content>
 </ContentPage>
