--- a/Medicos/Medicos/Views/ConsentimientoInformadoPage.xaml
+++ b/Medicos/Medicos/Views/ConsentimientoInformadoPage.xaml
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:local="clr-namespace:Medicos" 
+             xmlns:custom="clr-namespace:Medicos.CustomEntry"
              x:Class="Medicos.Views.ConsentimientoInformadoPage"
              BindingContext="{Binding Main, Source={StaticResource Locator}}"
              Title="Consentimiento Informado">
@@ -8,22 +10,75 @@
     <ContentPage.Content>
         <ScrollView>
             <StackLayout VerticalOptions="FillAndExpand" StyleClass="MainSL" BindingContext="{Binding ConsentimientoInformado}">
-                <Label Text="Consentimiento Informado" FontSize="20"></Label>
-                <StackLayout Margin="0,0,25,0">
-                    <Entry Text="{Binding Correo, Mode=TwoWay}" Placeholder="Correo E. del Paciente"></Entry>
-                    <!--<Picker Title="Seleccionar una Ciudad" SelectedItem="{Binding SelectedCiudad, Mode=TwoWay}"
-                            ItemDisplayBinding="{Binding CiudadStr}" 
-                            ItemsSource="{Binding Ciudades}">
-                    </Picker>!-->
-                    <Label Text="Datos Cuidador" FontAttributes="Bold" FontSize="14"></Label>
-                    <Entry Text="{Binding Cuidador, Mode=TwoWay}" Placeholder="Nombres y Apellidos"></Entry>
-                    <Entry Text="{Binding CuidadorDocumento, Mode=TwoWay}" Placeholder="Número de Identificación"></Entry>
-                    <Entry Text="{Binding Parentesco, Mode=TwoWay}" Placeholder="Parentesco"></Entry>
-                    <Entry Text="{Binding CuidadorTelefono, Mode=TwoWay}" Placeholder="Teléfono Celular"></Entry>
-                    <Label Text="Datos Médico Tratante" FontAttributes="Bold" FontSize="14"></Label>
-                    <Entry  Text="{Binding CentroAtencion, Mode=TwoWay}" Placeholder="Centro de Atención"></Entry>
-                    <StackLayout Margin="40,0">
-                        <Button Text="Siguiente" Command="{Binding SiguienteCommand}" BorderRadius="23"></Button>
+                <StackLayout Margin="0,0,0,0">
+                    <Image Source="top_bg.jpg" HorizontalOptions="Center"></Image>
+                </StackLayout>
+                <StackLayout VerticalOptions="StartAndExpand" StyleClass="MainSL2">
+                    <StackLayout Margin="5,-25,5,0">
+                        <custom:CustomEntry  
+                            CornerRadius="18"  
+                            IsCurvedCornersEnabled="True"    
+                            Text="{Binding Correo, Mode=TwoWay}"
+                            Placeholder="Correo E. del Paciente" 
+                            BackgroundColor="White"
+                            TextColor="#02a8d0"
+                            PlaceholderColor="#5ed5f2"
+                            />
+
+                        <!--<Picker Title="Seleccionar una Ciudad" SelectedItem="{Binding SelectedCiudad, Mode=TwoWay}"
+                                ItemDisplayBinding="{Binding CiudadStr}" 
+                                ItemsSource="{Binding Ciudades}">
+                        </Picker>!-->
+                        <Label Text="Datos Cuidador" TextColor="White" FontAttributes="Bold" FontSize="14"></Label>
+                        <custom:CustomEntry  
+                            CornerRadius="18"  
+                            IsCurvedCornersEnabled="True"    
+                            Text="{Binding Cuidador, Mode=TwoWay}"
+                            Placeholder="Nombres y Apellidos" 
+                            BackgroundColor="White"
+                            TextColor="#02a8d0"
+                            PlaceholderColor="#5ed5f2"
+                            />
+                        <custom:CustomEntry  
+                            CornerRadius="18"  
+                            IsCurvedCornersEnabled="True"    
+                            Text="{Binding CuidadorDocumento, Mode=TwoWay}" Placeholder="Número de Identificación"
+                            BackgroundColor="White"
+                            TextColor="#02a8d0"
+                            PlaceholderColor="#5ed5f2"
+                            />
+                        <custom:CustomEntry  
+                            CornerRadius="18"  
+                            IsCurvedCornersEnabled="True"    
+                            Text="{Binding Parentesco, Mode=TwoWay}" Placeholder="Parentesco"
+                            BackgroundColor="White"
+                            TextColor="#02a8d0"
+                            PlaceholderColor="#5ed5f2"
+                            />
+                        <custom:CustomEntry  
+                            CornerRadius="18"  
+                            IsCurvedCornersEnabled="True"    
+                            Text="{Binding CuidadorTelefono, Mode=TwoWay}" Placeholder="Teléfono Celular"
+                            BackgroundColor="White"
+                            TextColor="#02a8d0"
+                            PlaceholderColor="#5ed5f2"
+                            />
+                        <Image Source="datos_med_tratante.png" WidthRequest="180" HorizontalOptions="Start"></Image>
+                        <custom:CustomEntry  
+                            CornerRadius="18"  
+                            IsCurvedCornersEnabled="True"    
+                            Text="{Binding CentroAtencion, Mode=TwoWay}" Placeholder="Centro de Atención"
+                            BackgroundColor="White"
+                            TextColor="#02a8d0"
+                            PlaceholderColor="#5ed5f2"
+                            />
+                        <StackLayout Margin="0,25,0,0">
+                            <Image Source="siguiente.png" HorizontalOptions="Center" WidthRequest="125">
+                                <Image.GestureRecognizers>
+                                    <TapGestureRecognizer Command="{Binding SiguienteCommand}"></TapGestureRecognizer>
+                                </Image.GestureRecognizers>
+                            </Image>
+                        </StackLayout>
                     </StackLayout>
                 </StackLayout>
             </StackLayout>
