--- a/Medicos/Medicos/Views/NotificacionesPage.xaml
+++ b/Medicos/Medicos/Views/NotificacionesPage.xaml
@@ -6,34 +6,38 @@
              Title="Notificaciones">
     <ContentPage.Content>
         <StackLayout VerticalOptions="FillAndExpand" StyleClass="MainSL" BindingContext="{Binding Notificaciones}">
-            <Label FontSize="Large" HorizontalOptions="Center" Text="Caminando Juntos"></Label>
-            <Label FontSize="Small" HorizontalOptions="StartAndExpand" Text="Mis Notificaciones:"></Label>
-            <ListView  x:Name="listView"
-                HasUnevenRows="true" 
-                IsPullToRefreshEnabled="true"
-                IsRefreshing="{Binding IsRefreshing, Mode=TwoWay}"
-                ItemsSource="{Binding Notificaciones}"
-                SeparatorVisibility="None"
-                RefreshCommand="{Binding RefreshCommand}">
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-                        <ViewCell>
-                            <Grid x:Name="Item">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="24"/>
-                                    <ColumnDefinition Width="*"/>
-                                </Grid.ColumnDefinitions>
-                                <Image Grid.Column="0" Source="notificaciones.png" WidthRequest="24"></Image>
-                                <Label 
-                                Grid.Column="1"
-                                Text="{Binding Mensaje}"
-                                TextColor="Black">
-                                </Label>
-                            </Grid>
-                        </ViewCell>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>
+            <StackLayout Margin="0,0,0,0">
+                <Image Source="top_bg.jpg" HorizontalOptions="Center"></Image>
+            </StackLayout>
+            <StackLayout VerticalOptions="StartAndExpand"  StyleClass="MainSL2" >
+                <Label TextColor="White" Margin="0,-50,0,0" FontSize="Small" HorizontalOptions="StartAndExpand" Text="Mis Notificaciones:"></Label>
+                <ListView  x:Name="listView"
+                    HasUnevenRows="true" 
+                    IsPullToRefreshEnabled="true"
+                    IsRefreshing="{Binding IsRefreshing, Mode=TwoWay}"
+                    ItemsSource="{Binding Notificaciones}"
+                    SeparatorVisibility="None"
+                    RefreshCommand="{Binding RefreshCommand}">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <ViewCell>
+                                <Grid x:Name="Item">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="24"/>
+                                        <ColumnDefinition Width="*"/>
+                                    </Grid.ColumnDefinitions>
+                                    <Image Grid.Column="0" Source="notificaciones.png" WidthRequest="24"></Image>
+                                    <Label 
+                                    Grid.Column="1"
+                                    Text="{Binding Mensaje}"
+                                    TextColor="White">
+                                    </Label>
+                                </Grid>
+                            </ViewCell>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </StackLayout>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
